--- a/0.4_selectores/index.html
+++ b/0.4_selectores/index.html
@@ -38,10 +38,13 @@
          <p>Bienvenido</p>
      </section>
      <aside>
-         <h3>Articulo</h3>
-         <p>Articulo 1</p>
-         <p>Articulo 2</p>
-         <p>Articulo 3</p>
+         <div class="parrafos">
+            <h3>Articulo</h3>
+            <p>Articulo 1</p>
+            <p>Articulo 2</p>
+            <p>Articulo 3</p>
+         </div>
+        
      </aside>
      <footer class="contenedor">
          <p>soy un footer</p>
