--- a/0.6_Herencia, Cascada y Especificidad/index.html
+++ b/0.6_Herencia, Cascada y Especificidad/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="enlaces">Enlace</a>
     </nav> -->
 
-    <header class="header">
+    <header style="background-color: red;" class="header">
         <h2 class="title" id="title">Aprende diseño web</h2>
         <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     </header>
