--- a/0.8Box-shadow/index.html
+++ b/0.8Box-shadow/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colores</title>
+    <title>Box-Shadow</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <header class="header">
-        <h1 class="title">Curso CSS3</h1>
-    </header>
+    <!-- <img src="spidy.jpg" class="img"> -->
+    <!-- <div class="box"></div> -->
 </body>
 </html>
