--- a/0.9_Colores/index.html
+++ b/0.9_Colores/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box-Shadow</title>
+    <title>Colores</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="spidy.jpg" class="img">
-    <!-- <div class="box"></div> -->
+    <header class="header">
+        <h1 class="title">Curso CSS3</h1>
+    </header>
+    <div class="color">
+        
+    </div>
 </body>
 </html>
